# mbot_simulation

./: .gitignore  repository.debs  repository.rosinstall
mbot_gazebo_control/: CMakeLists.txt
mbot_gazebo_control/ros/config/: arm_position_control.yaml  arm_trajectory_control.yaml  arm_velocity_control.yaml  base_velocity_control.yaml  gripper_position_control.yaml  head_control.yaml  mbot_arm_control.yaml  mbot_arm_position_control.yaml  mbot_arm_trajectory_control.yaml  mbot_base_velocity_control.yaml  mbot_control.yaml  mbot_gripper_position_control.yaml  mbot_head_position_control.yaml  mbot_joint_state_control.yaml
mbot_gazebo_control/ros/include/mbot_gazebo_control/: mbot_head_gazebo_republisher.h
mbot_gazebo_control/ros/launch/: mbot_control.launch  mbot_control.yaml  mbot_head_control.launch  switch_from_traj_to_pos_ctrl.launch  switch_from_traj_to_vel_ctrl.launch
mbot_gazebo_control/ros/scripts/: switch_arm_sim_ctrl  switch_from_pos_to_traj_ctrl  switch_from_traj_to_position_ctrl
mbot_gazebo_control/ros/src/: mbot_head_gazebo_republisher.cpp  mbot_head_pan_controller.cpp
mbot_gazebo_control/ros/src/mbot_gazebo_control_ros/: automated_controller_switch.py  position_ctrl_sim_filter.py
mbot_head_controller_gazebo/: CMakeLists.txt  package.xml
mbot_head_controller_gazebo/ros/config/: head_control.yaml
mbot_head_controller_gazebo/ros/include/: mbot_head_pan.h
mbot_head_controller_gazebo/ros/include/mbot_head_controller_gazebo/: mbot_head_pan.h
mbot_head_controller_gazebo/ros/launch/: mbot_head_control.launch  mbot_head_pan_interface.launch
mbot_head_controller_gazebo/ros/src/: mbot_head_pan_controller.cpp
mbot_plugins/mbot_odom_gt/: CMakeLists.txt  package.xml
mbot_plugins/mbot_odom_gt/src/: gazebo_ros_p3d.cpp
mbot_rosbuild_simulation/: CMakeLists.txt  README.txt  behaviors_test.py  sqvel.py  virtual_omni_driver.py
mbot_rosbuild_simulation/config/: mapping.rviz  mbot_gazebo.yaml  mbot_head.yaml
mbot_rosbuild_simulation/launch/: mbot_gazebo.launch  omni_behavior_simulation.launch  omni_cobot_gazebo.launch  omni_teleop_simulation.launch
mbot_rosbuild_simulation/models/rockin_d213/: bstable1.dae  dchair1.dae  model_mono.sdf  tv.dae  walls.dae
mbot_rosbuild_simulation/src/: control_translator.cpp
mbot_rosbuild_simulation/worlds/: gazebo_rockin.world
mbot_simulation/: CMakeLists.txt  mbot_gazebo_control_plugins.xml  package.xml
mbot_simulation/ros/config/: base_controller.yaml
mbot_simulation/ros/launch/: arm_controller.launch  base_controller.launch  gripper_controller.launch  joint_state_controller.launch  mbot_with_left_arm.launch  mbot_world.launch  robot.launch
mbot_simulation/ros/src/: mbot_head_plugin.cc
mbot_simulation/ros/worlds/: isr-testbed.world
mbot_simulation_environment/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mbot_simulation_environment/config/: scout_control.yaml
mbot_simulation_environment/launch/: cobot_behavior_simulation.launch  cobot_gazebo.launch  cobot_simulation_mapping.launch  mbot_gazebo.launch  mbot_stage.launch
mbot_simulation_environment/maps/: at_home_testbed_original.pgm
mbot_simulation_environment/models/: HOWTO_adapt_furniture.txt
mbot_simulation_environment/models/rockin_d213/: bstable2.dae  dchair2.dae  kcab.dae  kchair1.dae  model.config  p1.dae  tvtable.dae
mbot_simulation_environment/src/: odom_broadcaster.cpp
mbot_simulation_environment/worlds/: gazebo_rockin.world  stage_ISR_6thfloor.world
mbot_simulation_environments/: package.xml
mbot_simulation_environments/models/: database.config
mbot_simulation_environments/models/isr-testbed/: bed.dae  bedroom_nightstand.dae  ctable.dae  dchair3.dae  dchair4.dae  kchair2.dae  ktable.dae  model.config  model_mono.sdf  model_split.sdf  p2.dae  sofa.dae  tv_chair.dae  walls.stl
mbot_simulation_environments/models/isr-testbed/bed/: model.sdf
mbot_simulation_environments/models/isr-testbed/bedroom_nightstand/: model.sdf
mbot_simulation_environments/models/isr-testbed/dinning_room_table/: model.sdf
mbot_simulation_environments/models/isr-testbed/dinning_room_table_blender/: model.sdf
mbot_simulation_environments/models/isr-testbed/kitchen_table/: model.sdf
mbot_simulation_environments/models/isr-testbed/living_room_table/: model.sdf
mbot_simulation_environments/models/isr-testbed/simple_chair/: model.sdf
mbot_simulation_environments/models/isr-testbed/sofa/: model.sdf  sofa.blend
mbot_simulation_environments/models/isr-testbed/tv/: model.sdf  tv.blend
mbot_simulation_environments/models/isr-testbed/tv_chair/: model.sdf
mbot_simulation_environments/models/isr-testbed/tv_table/: model.sdf
mbot_simulation_environments/models/rockin_d213/: kchair3.dae  kchair4.dae  model_split.sdf  sofa.dae
mbot_simulation_environments/worlds/: isr-empty-testbed.world  isr-testbed.world
mbot_simulator/: CMakeLists.txt  README.md  package.xml
mbot_simulator/config/: mbot_controller.yaml  simulation_omni.yaml
mbot_simulator/launch/: mbot_sim.launch
mbot_simulator/meshes/: mbot_body.dae  mbot_head.dae  monarchShape.dae
mbot_simulator/models/: manipulator.urdf  manipulator_macros.urdf.xacro  mbot.urdf  mbot.urdf.xacro  monarch.urdf  monarch.urdf.xacro
mbot_simulator/src/: control_translator.cpp  motion_node.cpp
