<?xml version="1.0"?>
<package>
  <name>mbot_head_controller_gazebo</name>
  <version>0.0.1</version>
  <description>mbot head pan controller node - republishes from cmd_head(semantic controller topic) to the JointPositionController Command topic - used to control pan angle of mbot head</description>

  <author email="parthc@umich.edu">Parth Chopra</author>
  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <run_depend>joint_state_controller</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
