<?xml version="1.0"?>
<package>
  <name>mbot_simulation_environment</name>
  <version>0.0.1</version>
  <description>
      Monarch robot simulation with gazebo
  </description>

  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <author email="rodrigo.ventura@isr.ist.utl.pt">Rodrigo ventura</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  
  <run_depend>controller_manager</run_depend-->
  
 
</package>
